deploy: 038bad2b5b95b8a82dc6d744481e9fc14e6741de

--- a/rhoso-intro/1/ch1-intro/index.html
+++ b/rhoso-intro/1/ch1-intro/index.html
@@ -273,7 +273,7 @@ Work in Progress
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This chapter presents the OpenStack open source project and the <strong>Red Hat OpenStack Services on OpenShift</strong> product, so you understand now the current Red Hat OpenStack product is different from community OpenStack and from previous releases of Red Hat OpenStack plaform.</p>
+<p>This chapter presents the OpenStack open source project and the <strong>Red Hat OpenStack Services on OpenShift</strong> product, so you understand how the current Red Hat OpenStack product is different from community OpenStack and from previous releases of Red Hat OpenStack plaform.</p>
 </div>
 <div class="paragraph">
 <p>This chapter also introduces two OpenStack user personas: the <strong>OpenStack Operator</strong>, which is the focus of this course, and the OpenStack Administrator, so you understand the scope of work, tooks, and skills required from OpenStack Operators to perform their daily jobs.</p>
