--- a/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s2-components-quiz-answers.html
@@ -354,7 +354,7 @@ Pending review.
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
-<p><i class="fa fa-square-o"></i> By runnig control plane servers as VMs using a standalone hyperviusor such as RHV.<br>
+<p><i class="fa fa-square-o"></i> By runnig control plane servers as VMs using a standalone hypervisor such as RHV.<br>
 <em>Incorrect: This was an option with older releases of Red Hat OpenStack platform, but not anymore with Red Hat OpenStack Services on OpenShift.</em></p>
 </li>
 <li>
