--- a/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
+++ b/rhoso-intro/1/ch1-intro/s4-tasks-quiz-answers.html
@@ -289,7 +289,7 @@ Pending review.
 <em>Correct: Virtual networks and everything related to them are OpenStack API resources.</em></p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Configuring firewalld rules inside a RHEL VM.<br>
+<p><i class="fa fa-square-o"></i> Configuring firewall rules inside a RHEL VM.<br>
 <em>Incorrect: Linux System Administrators are more likely to perform tasks inside a VM</em></p>
 </li>
 </ul>
@@ -308,7 +308,7 @@ Pending review.
 <em>Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads.</em></p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Creating a new class of virtual server, wich provides virtual GPUs.<br>
+<p><i class="fa fa-square-o"></i> Creating a new class of virtual server, which provides virtual GPUs.<br>
 <em>Incorrect: OpenStack Administrators manage OpenStack resources which potentially affect an entire OpenStack cluster.</em></p>
 </li>
 <li>
