--- a/rhoso-intro/1/ch1-intro/s7-review-quiz.html
+++ b/rhoso-intro/1/ch1-intro/s7-review-quiz.html
@@ -341,7 +341,7 @@ Pending review.
 </div>
 </li>
 <li>
-<p>An OpenStack Operator focuses on OpenStack API resources that affect individual application workloads, as opposd to OpenStack API resources which affect an entire cluster.</p>
+<p>An OpenStack Operator focuses on OpenStack API resources that affect individual application workloads, as opposed to OpenStack API resources which affect an entire cluster.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
