--- a/rhoso-intro/1/ch1-intro/s8-summary.html
+++ b/rhoso-intro/1/ch1-intro/s8-summary.html
@@ -247,12 +247,12 @@
 <article class="doc">
 <h1 class="page">Summary</h1>
 <div class="paragraph">
-<p>In this chapter, you learned:</p>
+<p>In this chapter, you learn:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>OpenStack is a platform for building private clouds and manage applications running as Virtual Machines (VMs), with virtual networks and virtual storage. It is composed of a number of user-facing and internal infrastructure services.</p>
+<p>OpenStack is a platform for building private clouds and managing applications running as Virtual Machines (VMs), with virtual networks and virtual storage. It is composed of a number of user-facing and internal infrastructure services.</p>
 </li>
 <li>
 <p>Red Hat OpenStack Services on OpenShift provides a selection of OpenStack services, pre-integrated and pre-configured with each other and also with Red Hat Enterprise Linux (RHEL), Red Hat OpenShift, and Red Hat Ceph Storage.</p>
