--- a/rhoso-intro/1/ch2-services/s4-additional-quiz.html
+++ b/rhoso-intro/1/ch2-services/s4-additional-quiz.html
@@ -304,7 +304,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services would be useful for a mobile Customer Support Management system which provides a scalable REST API layer designed to run more or less server instances accoding to load from end-users?  The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.</p>
+<p>Which of the following OpenStack services would be useful for a mobile Customer Support Management system which provides a scalable REST API layer designed to run more or less server instances according to load from end-users?  The Customer Support Management system enables customers to upload photos as objects, directly from their cell phones, to help with troubleshooting issues.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
@@ -332,7 +332,7 @@ Pending Review
 </div>
 </li>
 <li>
-<p>Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scients to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Matematicians who are not using the platform but rely on desktop applications.</p>
+<p>Which of the following OpenStack services would be useful for a Machine Learning platform which enables Data Scients to train models and later expose those models, with a dynamically generated URL, on compute nodes with powerful GPUs, to ensure quick response times? During training, the Data Scientists need to share data as regular files with Mathematicians who are not using the platform but rely on desktop applications.</p>
 <div class="ulist checklist">
 <ul class="checklist">
 <li>
