--- a/rhoso-intro/1/index.html
+++ b/rhoso-intro/1/index.html
@@ -267,7 +267,7 @@ Work in Progress
 <p>This is the first course for <strong>IT professionals</strong> who are new to Red Hat OpenStack Services on OpenShift. It requires no previous experience with OpenStack, but it requires some familiarity with Linux system administration and virtual machine management.</p>
 </div>
 <div class="paragraph">
-<p>This course is also useful for learners with previous experience with OpenStack, providing  a high-level understanding of what&#8217;s included in the Red Hat product and how it might be different than other OpenStack distributions; and a quick overview of how Red Hat OpenStack Services on OpenShift differs from previous incarnations of the Red Hat OpenStack platform.</p>
+<p>This course is also useful for learners with previous experience with OpenStack, providing  a high-level understanding of what&#8217;s included in the Red Hat product and how it might be different than other OpenStack distributions. It also provides a quick overview of how Red Hat OpenStack Services on OpenShift differs from previous incarnations of the Red Hat OpenStack platform.</p>
 </div>
 </div>
 </div>
@@ -275,7 +275,7 @@ Work in Progress
 <h2 id="_course_objective"><a class="anchor" href="#_course_objective"></a>Course Objective</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>As a result of taking this course, Operators of Red Hat OpenStack will be able to explain the purpose, functionality, and inter-dependencies of the user-facing services provided by Red Hat OpenStack Services on OpenShift and how they meet the requirements of application workloads running as VMs. They will also be able to explain how multi-tenancy features of Red Hat OpenStack Services on OpenShift enable separation of concerns between the teams that manage the workloads and the teams that administer the OpenStack cluster that hosts the workloads.</p>
+<p>As a result of taking this course, Operators of Red Hat OpenStack will be able to explain the purpose, functionality, and inter-dependencies of the user-facing services provided by Red Hat OpenStack Services on OpenShift, and how they meet the requirements of application workloads running as VMs. They will also be able to explain how multi-tenancy features of Red Hat OpenStack Services on OpenShift enable separation of concerns between the teams that manage the workloads and the teams that administer the OpenStack cluster that hosts the workloads.</p>
 </div>
 <div class="paragraph">
 <p>This course includes a quick introduction to the following OpenStack services: Horizon, Keystone, Nova, Neutron, Cinder, Manila, Glance, Swift, Ceilometer, Octavia, Designate, Heat, Placement, Barbican, and Ironic.</p>
