--- a/rhoso-intro/1/ch2-services/s5-administration-lecture.html
+++ b/rhoso-intro/1/ch2-services/s5-administration-lecture.html
@@ -306,7 +306,7 @@ Pending Review
 <h2 id="_openstack_authentication_and_service_discovery_keystone"><a class="anchor" href="#_openstack_authentication_and_service_discovery_keystone"></a>OpenStack Authentication and Service Discovery: Keystone</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We were already introduced to Keysone because of its role when any client interacts with OpenStack APIs: It is the authentication entry point and it provides the API entry points for all other user-facing services.</p>
+<p>We were already introduced to Keystone because of its role when any client interacts with OpenStack APIs: It is the authentication entry point and it provides the API entry points for all other user-facing services.</p>
 </div>
 <div class="paragraph">
 <p>OpenStack KeyStone also manages resources which enable organizing the work of Operations and Administration teams, such as projects and domains:</p>
@@ -324,10 +324,10 @@ Pending Review
 </dl>
 </div>
 <div class="paragraph">
-<p>Cluster-level API resources live in special domain named <strong>default</strong> and a special project inside that domain, named <strong>system</strong>.</p>
+<p>Cluster-level API resources live in a special domain named <strong>default</strong> and a special project inside that domain, named <strong>system</strong>.</p>
 </div>
 <div class="paragraph">
-<p>OpenStack Keystone also has a role in authorization relate to OpenStack APIs, by providing many attributes which individual services use to make authorization decisions, such as <strong>groups</strong> and <strong>roles</strong>, but Keystone itself does not make any authorization decision: services make those decisions, by themselves, which can occasionaly create inconsistencies.</p>
+<p>OpenStack Keystone also has a role in authorization related to OpenStack APIs, by providing many attributes which individual services use to make authorization decisions, such as <strong>groups</strong> and <strong>roles</strong>, but Keystone itself does not make any authorization decision: services make those decisions, by themselves, which can occasionally create inconsistencies.</p>
 </div>
 </div>
 </div>
@@ -343,19 +343,19 @@ Pending Review
 </div>
 </div>
 <div class="sect1">
-<h2 id="_physical_manchine_management_ironic"><a class="anchor" href="#_physical_manchine_management_ironic"></a>Physical Manchine Management: Ironic</h2>
+<h2 id="_physical_machine_management_ironic"><a class="anchor" href="#_physical_machine_management_ironic"></a>Physical Machine Management: Ironic</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>OpenStack Ironic enables managing physical machines as if they were virtual machies, as long as those machines have management hardware which is compliant to standards, such as <a href="https://en.wikipedia.org/wiki/Intelligent_Platform_Management_Interface">IPMI</a> or <a href="https://redfish.dmtf.org/">Redfish</a>, or from a vendor which provider an OpenStack driver for its proprietary hardware management interface.</p>
+<p>OpenStack Ironic enables managing physical machines as if they were virtual machies, as long as those machines have management hardware which is compliant to standards, such as <a href="https://en.wikipedia.org/wiki/Intelligent_Platform_Management_Interface">IPMI</a> or <a href="https://redfish.dmtf.org/">Redfish</a>, or from a vendor who provides an OpenStack driver for its proprietary hardware management interface.</p>
 </div>
 <div class="paragraph">
 <p>Through Ironic, you can perform operations such as powering on and off a physical machine, or booting it from virtual, local, or remote media to install an operating system. These enable automating provisioning, tearing-down, and even recovery of machines from software errors. Of course, all that depends on the physical machines being already wired to the correct server hack, power supply, and network switches.</p>
 </div>
 <div class="paragraph">
-<p>Previous releases of Red Hat Openstack platform could use Ironic to provision compute nodes for the OpenStack cluster itself, but Red Hat OpenStack Services on OpenShift uses Ironic only for provisiong machines to be used as server instances by an OpenStack Operator to run application workloads.</p>
+<p>Previous releases of Red Hat Openstack platform could use Ironic to provision compute nodes for the OpenStack cluster itself, but Red Hat OpenStack Services on OpenShift uses Ironic only for provisioning machines to be used as server instances by an OpenStack Operator to run application workloads.</p>
 </div>
 <div class="paragraph">
-<p>OpenStack Operators can use physical machines managed by Ironic as just another class of server instance (or *flavor), intended for applications which require lots of compute capacity or hardware speeds. Remember that OpenStack provides mechanisms to deal with special hardware, such as GPUs and SR-IOV network acellerator cards, and you do not need to deploy applications on physical machines to get access to different kinds of special hardware.</p>
+<p>OpenStack Operators can use physical machines managed by Ironic as just another class of server instance (or *flavor), intended for applications which require lots of compute capacity or hardware speeds. Remember that OpenStack provides mechanisms to deal with special hardware, such as GPUs and SR-IOV network accelerator cards, and you do not need to deploy applications on physical machines to get access to different kinds of special hardware.</p>
 </div>
 <div class="paragraph">
 <p>Because of its specific usage, Ironic is the only service of Red Hat OpenStack Services on OpenShift that could be typically disabled.</p>
@@ -369,7 +369,7 @@ Pending Review
 <p>OpenStack Cleilometer collects, transforms, and normalizes performance data from other OpenStack services. The data from Ceilometer enables other features such as autoscaling of server groups and includes not only per-service data but also per resource, such as server instances, volumes, and computes.</p>
 </div>
 <div class="paragraph">
-<p>Some of the data from Ceilometer feed nice graphics and dashboards in Horizon, but Ceilometer it is not intended to be a complete nor standalone monitoring and observability solution. OpenStack Administrator require third-party products or open source projects to visualize, query, and analyse data from Ceilometer, besides long-term storage of those data for capacity planing, assessing sazonability patterns, and other uses.</p>
+<p>Some of the data from Ceilometer feed nice graphics and dashboards in Horizon, but it is not intended to be a complete nor standalone monitoring and observability solution. OpenStack Administrator require third-party products or open source projects to visualize, query, and analyse data from Ceilometer, besides long-term storage of those data for capacity planing, assessing seasonability patterns, and other uses.</p>
 </div>
 <div class="paragraph">
 <p>Red Hat OpenStack Services on OpenShift feeds the data from Ceilometer to OpenShift Monitoring for storage, and OpenStack Administrators can use OpenShift Monitoring dashoards and PromQL queries from Prometheus to visualize, query, and generate alerts.</p>
