--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -274,7 +274,7 @@ Pending Review.
 <h2 id="_multitenancy_with_openstack"><a class="anchor" href="#_multitenancy_with_openstack"></a>Multitenancy with OpenStack</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>OpenStack clusters typically run many applications and are managed by many Operators. OpenStack does not prescribe a way of grouping applications and Operators, but provides a general mechanism for enforcing many possible organizational structures, based on domains and projects.</p>
+<p>OpenStack clusters typically run many applications and are managed by many Operators. OpenStack does not prescribe a way of grouping applications and Operators, but provides a general mechanism for enforcing whatever is your organizational need, based on domains and projects.</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -363,7 +363,7 @@ Pending Review.
 </ul>
 </div>
 <div class="paragraph">
-<p>To understand the difference between admin and member roles, consider the conflicting needs of granting some authonomy to OpenStack Operators, while denying them the ability to perform dangerous operations. For example, a user might have permission to create server instances and networks inside a project, but the same user cannot change resource quotas on that project, nor grant access to resources to other users.</p>
+<p>To understand the difference between admin and member roles, consider the conflicting needs of granting some autonomy to OpenStack Operators, while denying them the ability to perform dangerous operations. For example, a user might have permission to create server instances and networks inside a project, but the same user cannot change resource quotas on that project, nor grant access to resources to other users.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -399,7 +399,7 @@ Remember that users do <strong>not</strong> own OpenStack API resources. Servers
 <p>Traditional data centers may be used to the LDAP technology, used by identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard.</p>
 </div>
 <div class="paragraph">
-<p>It is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because popular server and workstation operating systems cannot authenticate users directly using OIDC, but most of the times there is not reason to make OpenStack compute nodes themselves members of an MSAD or RHEL IdM authetication domain.</p>
+<p>Nowadays, it is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because most operating systems cannot authenticate local users using OIDC, but most of the times there is no reason to make OpenStack compute nodes members of your MSAD or RHEL IdM authetication domain.</p>
 </div>
 </div>
 <div class="sect2">
